# edinet-xbrl-parser

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: setup_venv312.bat
src/: arelle_tools.py  edinet_tools.py  generate_fs.py  main_edinet.py  outputs.py  outputs_xbrl.py  preflight.py  save_xbrl.py
tests/: test_edinet_tools.py
